--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Local .terraform directories
 .terraform/
-
+aws/
 # .tfstate files
 *.tfstate
 *.tfstate.*
@@ -35,3 +35,4 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+awscliv2.zip
